--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -83,6 +84,7 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "esm": "^3.0.80",
+    "exenv": "^1.2.2",
     "express": "^4.16.3",
     "express-jwt": "^5.3.0",
     "formidable": "^1.2.1",
@@ -107,9 +109,10 @@
     "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
-    "react": "^16.4.2",
+    "react": "^16.8.6",
     "react-chartjs-2": "^2.7.4",
-    "react-dom": "^16.4.2",
+    "react-data-table-component": "1.4.6",
+    "react-dom": "^16.8.6",
     "react-dropzone": "^5.0.1",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
@@ -128,6 +131,7 @@
     "sitemap": "^1.13.0",
     "slug": "^0.9.1",
     "stripe": "^6.7.0",
+    "styled-components": "^4.3.2",
     "theme": "file:theme",
     "ua-parser-js": "^0.7.18",
     "webpack": "^4.17.1",
@@ -139,5 +143,8 @@
   "engines": {
     "node": "^8.0.0",
     "npm": "^5.0.0"
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.7"
   }
 }
