--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^4.0.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
     "eslint": "^5.4.0",
