--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "cors": "^2.8.5",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
+    "download": "^7.1.0",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
@@ -88,6 +89,7 @@
     "exenv": "^1.2.2",
     "express": "^4.16.3",
     "express-jwt": "^5.3.0",
+    "form-data": "^2.5.0",
     "formidable": "^1.2.1",
     "fs-extra": "^7.0.0",
     "handlebars": "^4.0.11",
