--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "react-scroll": "^1.7.10",
     "react-sortable-hoc": "^0.8.3",
     "react-stripe-elements": "^2.0.1",
+    "react-table": "^6.10.0",
     "react-tagsinput": "^3.19.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
