--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "husky": "^0.14.3",
     "jsonwebtoken": "^8.3.0",
     "lint-staged": "^7.2.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.15",
     "lru-cache": "^4.1.3",
     "material-ui": "^0.20.2",
     "mini-css-extract-plugin": "^0.4.2",
@@ -122,7 +122,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scroll": "^1.7.10",
+    "react-slick": "^0.24.0",
     "react-sortable-hoc": "^0.8.3",
+    "react-stars": "^2.2.5",
     "react-stripe-elements": "^2.0.1",
     "react-table": "^6.10.0",
     "react-tagsinput": "^3.19.0",
@@ -133,6 +135,7 @@
     "response-time": "^2.3.2",
     "sass-loader": "^7.1.0",
     "sitemap": "^1.13.0",
+    "slick-carousel": "^1.8.1",
     "slug": "^0.9.1",
     "stripe": "^6.7.0",
     "styled-components": "^4.3.2",
