--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scroll": "^1.7.10",
+    "react-select": "^3.0.4",
     "react-slick": "^0.24.0",
     "react-sortable-hoc": "^0.8.3",
     "react-stars": "^2.2.5",
